--- a/WEB-TEST/fr/plus.html
+++ b/WEB-TEST/fr/plus.html
@@ -16,11 +16,15 @@
             </nav>
         </header>
         <!--Main-->
-        <main class="home">
-            <h1>SoulsRuns</h1>
+        <main class="plus">
+            <h2>Qu'est-ce que le speedrun ?</h1>
             <p>
-                SoulsRuns est un site qui répertorie les meilleurs speedruns des jeux de type <b>Souls</b>.<br>
-                Le site ne répertorie uniquement les jeux "officiels", ceux qui ont été publié par le studio de jeux vidéos FromSoftware
+                Le speedrun ou sprint vidéo est une pratique liée aux jeux vidéo dans laquelle le but est d'atteindre le plus rapidement possible un objectif donné, le plus souvent terminer le jeu. Les jeux vidéo nécessitant habituellement des heures de jeu pour être résolus, 
+                peuvent parfois être terminés en quelques minutes.
+            </p>
+            <h2>Pourquoi cette catégorie de speedrun et pas une autre</h2>
+            <p>
+                SoulsRuns ne répertorie uniquement les catégorie les plus populaires de chaque jeux, elle peut donc être différente d'un jeu à l'autre.
             </p>
         </main>
         <!--Footer-->
